LASB-4379: PR Comments
Update TrialDataService logging
Fix method name typo
Split Appeal and Trial data services
Move methods down to XhibitDataService
Refactor S3 retrieval
Add AppealDataServiceTest
Remove status column